--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "fun game mode for bezzerwizzer for 2 players",
   "main": "index.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "start": "webpack --mode=development --watch & php -S localhost:8080",
+    "build": "webpack --mode=production"
   },
   "keywords": [
     "game",
@@ -13,5 +15,13 @@
     "minimalist"
   ],
   "author": "stefankarlsson",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {},
+  "devDependencies": {
+    "babel-loader": "^7.1.4",
+    "jest": "^22.4.2",
+    "webpack": "^4.1.1",
+    "webpack-cli": "^2.0.11"
+  },
+  "repository": "https://github.com/stefankarlsson/bezzerwizer42"
 }
