--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "jest",
     "dev": "webpack-dev-server",
-    "build": "webpack --mode=production"
+    "build": "webpack"
   },
   "keywords": [
     "game",
