--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "jest",
     "dev": "webpack-dev-server",
-    "build": "webpack"
+    "build": "webpack",
+    "start": "webpack-dev-server"
   },
   "keywords": [
     "game",
@@ -29,5 +30,8 @@
     "browser-sync": "^2.23.6",
     "ajv": "^6.2.1"
   },
-  "repository": "https://github.com/stefankarlsson/bezzerwizer42"
+  "repository": "https://github.com/stefankarlsson/bezzerwizer42",
+  "dependencies": {
+    "express": "^4.16.3"
+  }
 }
