--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "jest",
     "dev": "webpack-dev-server",
     "build": "webpack",
-    "start": "webpack-dev-server"
+    "start": "webpack & node server.js"
   },
   "keywords": [
     "game",
