--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "test": "jest",
     "dev": "webpack-dev-server",
-    "build": "webpack",
-    "start": "webpack & node server.js"
+    "start": "node server.js",
+    "postinstall": "webpack",
   },
   "keywords": [
     "game",
