--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "jest",
     "dev": "webpack-dev-server",
     "start": "node server.js",
-    "postinstall": "webpack",
+    "postinstall": "webpack"
   },
   "keywords": [
     "game",
